--- a/.github/workflows/deploy-unraid.yml
+++ b/.github/workflows/deploy-unraid.yml
@@ -26,19 +26,24 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+        cache: 'pnpm'
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 8
 
     - name: Install dependencies
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
     - name: Generate Prisma client
       run: npx prisma generate
 
     - name: Run linter
-      run: npm run lint
+      run: pnpm run lint
 
     - name: Build application
-      run: npm run build
+      run: pnpm run build
 
     - name: Log in to Container Registry
       if: github.event_name != 'pull_request'
