--- a/.github/workflows/deploy-unraid.yml
+++ b/.github/workflows/deploy-unraid.yml
@@ -34,13 +34,24 @@ jobs:
         cache: 'pnpm'
 
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: |
+        echo "Installing dependencies..."
+        pnpm install --frozen-lockfile
+        echo "Dependencies installed successfully"
 
     - name: Generate Prisma client
-      run: npx prisma generate
+      run: |
+        echo "Generating Prisma client..."
+        npx prisma generate
+        echo "Prisma client generated successfully"
 
     - name: Build application
-      run: pnpm run build
+      env:
+        SKIP_ENV_VALIDATION: true
+      run: |
+        echo "Building application..."
+        pnpm run build
+        echo "Application built successfully"
 
     - name: Log in to Container Registry
       if: github.event_name != 'pull_request'
