--- a/.github/workflows/deploy-unraid.yml
+++ b/.github/workflows/deploy-unraid.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         echo "Installing dependencies..."
-        pnpm install --frozen-lockfile
+        pnpm install --no-frozen-lockfile
         echo "Dependencies installed successfully"
 
     - name: Generate Prisma client
