--- a/.github/workflows/deploy-unraid.yml
+++ b/.github/workflows/deploy-unraid.yml
@@ -81,6 +81,8 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: Create deployment artifact
       if: github.event_name != 'pull_request'
